# fluux-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
config/: agent.example.toml
data/memory/: README.md
docs/: DEVELOPING.md  SECURITY.md  SESSION_FORMAT.md  SKILLS.md  SKILLS_EXAMPLES.md  XEPS.md
scripts/: prepare-release.sh
skills/email-summary/: skill.toml
src/: backoff.rs  config.rs  main.rs
src/agent/: files.rs  memory.rs  mod.rs  runtime.rs
src/llm/: anthropic.rs  client.rs  mod.rs  ollama.rs
src/sandbox/: mod.rs
src/skills/: mod.rs  registry.rs
src/skills/builtin/: memory.rs  mod.rs  url_fetch.rs  web_search.rs
src/skills/builtin/web_search/: mod.rs  perplexity.rs  tavily.rs
src/xmpp/: client.rs  component.rs  mod.rs  sasl.rs  stanzas.rs
